--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My First GitHub Page</title>
+<title>SheetTech Roofing</title>
 </head>
 <body>
 <header>
-<h1>Welcome to My Website!</h1>
+<h1>Your Dream Home Awaits—Let’s Find It Together!</h1>
 </header>
 <main>
-<p>This is a simple webpage hosted on GitHub Pages.</p>
-<p>Here's a picture of a cute cat:</p>
-<img src="https://placekitten.com/200/300" alt="A cute kitten">
+<p>Unlocking Doors to Your Dream Home.</p>
+<p>Find Your Perfect Place with Us:</p>
+<img src="download.jfif" alt="A cute kitten">
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 </main>
 <footer>
